--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 						<span class="say">Anh phát hiện ra rằng anh mang một căn bệnh mà có lẽ,</span><br>
 						<span class="say">Có lẽ sẽ không bao giờ có thuốc điều trị</span><br>
 						<span class="say">Là căn bệnh hạnh phúc nhất mà anh may mắn mắc phải</span><br>
-						<span class="say">Đó là bệnh "URA" yêu em quá nhiều</span><br>
+						<span class="say">Đó là bệnh yêu em quá nhiều :))</span><br>
                         <span class="say">Yêu em cho đến khi nào anh không còn tồn tại </span><br>
 						<span class="say">Hãy cứ tin ANH, em nhé!</span><br>
                         <span class="say">Chúc em hạnh phúc bên anh, hehe ♥!</span><br>
-                        <span class="say"><span class="space"></span> -- URA yêu PIKA ♥ --</span>
+                        <span class="say"><span class="space"></span> -- Khánh yêu Oanh ♥ --</span>
 						<!-- Chỉnh sửa đoạn này -->
 			  </font></p>
       </div>
@@ -180,7 +180,7 @@
 
         var textAnimate = eval(Jscex.compile("async", function () {
 		    var together = new Date();
-		    var year = 2021, month = 12, day = 26; // (2) thay đổi ngày tháng năm yêu nhau tại đây
+		    var year = 2022, month = 5, day = 22; // (2) thay đổi ngày tháng năm yêu nhau tại đây
 		    together.setFullYear(year, month - 1, day); 			
 		    together.setHours(0);							
 		    together.setMinutes(0);				
@@ -213,7 +213,7 @@
 				
 
 </div>
-<iframe src="https://www.nhaccuatui.com/lh/background/aGbHfJT63EYW" width="1" height="1" frameborder="0" allowfullscreen allow="autoplay"></iframe><!-- (3) Thay đổi nhạc tại đây-->
+<iframe src="https://www.nhaccuatui.com/mh/background/sLyG66mkb5Lc" width="1" height="1" frameborder="0" allowfullscreen allow="autoplay"></iframe></iframe><!-- (3) Thay đổi nhạc tại đây-->
 
 <style>
 
