--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div id="text">
 			        <div id="code">
 									<!-- (1) CHỈNH SỬA LỜI CỦA BẠN TẠI ĐÂY-->
-			      <font color="#3500ff"><span class="say">Hello Daisy, người con gái anh yêu!</span><br>
+			      <font color="#3500ff"><span class="say">Hello Oanh, người con gái anh yêu!</span><br>
 						<span class="say">Em có nhớ chúng ta đã gặp nhau được bao nhiêu ngày không ?</span><br>
 						<span class="say">Anh thì nhớ rất rõ đấy.</span><br>
 						<span class="say"> </span><br>
@@ -180,7 +180,7 @@
 
         var textAnimate = eval(Jscex.compile("async", function () {
 		    var together = new Date();
-		    var year = 2022, month = 5, day = 22; // (2) thay đổi ngày tháng năm yêu nhau tại đây
+		    var year = 2022, month = 6, day = 26; // (2) thay đổi ngày tháng năm yêu nhau tại đây
 		    together.setFullYear(year, month - 1, day); 			
 		    together.setHours(0);							
 		    together.setMinutes(0);				
