--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div id="text">
 			        <div id="code">
 									<!-- (1) CHỈNH SỬA LỜI CỦA BẠN TẠI ĐÂY-->
-			      <font color="#ff0000"><span class="say">Hello Oanh, người con gái anh yêu!</span><br>
+			      <font color="#8c03fc"><span class="say">Hello Oanh, người con gái anh yêu!</span><br>
 						<span class="say">Em có nhớ chúng ta đã gặp nhau được bao nhiêu ngày không ?</span><br>
 						<span class="say">Anh thì nhớ rất rõ đấy.</span><br>
 						<span class="say"> </span><br>
