--- a/index.html
+++ b/index.html
@@ -23,26 +23,26 @@
                 <div id="text">
 			        <div id="code">
 									<!-- (1) CHỈNH SỬA LỜI CỦA BẠN TẠI ĐÂY-->
-			      <font color="#000000"><span class="say">Hello Oanh, người con gái anh yêu!</span><br>
-						<span class="say">Em có nhớ chúng ta đã gặp nhau được bao nhiêu ngày không ?</span><br>
-						<span class="say">Anh thì nhớ rất rõ đấy.</span><br>
+			      <font color="#000000"><span class="say">Lê Thị Kim Oanh, người con gái anh yêu!</span><br>
+						<span class="say">Em Có Nhớ Chúng Ta Đã Gặp Nhau Được Bao Nhiêu Ngày Không ?</span><br>
+						<span class="say">Anh Thì Nhớ Rất Rõ Đấy.</span><br>
 						<span class="say"> </span><br>
-						<span class="say">Người ta nói bệnh nào cũng có thuốc chữa</span><br>
-						<span class="say">Anh đã không tin điều đó cho đến khi anh gặp được em</span><br>
-						<span class="say">Anh phát hiện ra rằng anh mang một căn bệnh mà có lẽ,</span><br>
-						<span class="say">Có lẽ sẽ không bao giờ có thuốc điều trị</span><br>
-						<span class="say">Là căn bệnh hạnh phúc nhất mà anh may mắn mắc phải</span><br>
-						<span class="say">Đó là bệnh yêu em quá nhiều :))</span><br>
-                        <span class="say">Yêu em cho đến khi nào anh không còn tồn tại </span><br>
-						<span class="say">Hãy cứ tin ANH, em nhé!</span><br>
-                        <span class="say">Chúc em hạnh phúc bên anh, hehe ♥!</span><br>
-                        <span class="say"><span class="space"></span> -- Khánh yêu Oanh ♥ --</span>
+						<span class="say">Người Ta Nói Bệnh Nào Cũng Có Thuốc Chữa</span><br>
+						<span class="say">Anh Đã Không Tin Điều Đó Cho Đến Khi Anh Gặp Được Em</span><br>
+						<span class="say">Anh Phát Hiện Ra Rằng Anh Mang Một Căn Bệnh Mà Có Lẽ,</span><br>
+						<span class="say">Sẽ Không Bao Giờ Có Thuốc Điều Trị</span><br>
+						<span class="say">Đây Là Căn Bệnh Hạnh Phúc Nhất Mà Anh May Mắn Mắc Phải</span><br>
+						<span class="say">Đó Là Bệnh Yêu Em Quá Nhiều :)))))</span><br>
+                        <span class="say">Yêu Em Cho Đến Khi Nào Anh Không Còn Tồn Tại </span><br>
+						<span class="say">Hãy Tin Anh, Em Nhé!!</span><br>
+                        <span class="say">Chúc Em Hạnh Phúc Bên Anh, Hehe ♥!</span><br>
+                        <span class="say"><span class="space"></span> -- Khánh Yêuu Oanh ♥ --</span>
 						<!-- Chỉnh sửa đoạn này -->
 			  </font></p>
       </div>
                 </div>
                 <div id="clock-box">
-					<span class="STYLE1"> Thời gian đã yêu em</span>
+					<span class="STYLE1"> Thời Gian Đã Yêu Emmm</span>
                   <div id="clock"></div>
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
