--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div id="text">
 			        <div id="code">
 									<!-- (1) CHỈNH SỬA LỜI CỦA BẠN TẠI ĐÂY-->
-			      <font color="#000000"><span class="say">Lê Thị Kim Oanh, người con gái anh yêu!</span><br>
+			      <font color="#000000"><span class="say">Lê Thị Kim Oanh, Người Con Gái Anh Rất Yêu!</span><br>
 						<span class="say">Em Có Nhớ Chúng Ta Đã Gặp Nhau Được Bao Nhiêu Ngày Không ?</span><br>
 						<span class="say">Anh Thì Nhớ Rất Rõ Đấy.</span><br>
 						<span class="say"> </span><br>
